--- a/style/style.css
+++ b/style/style.css
@@ -8,7 +8,7 @@ html, body {
 }
 
 body {
-  background-color: #f7d9da;
+  background-color: #2e2e2e;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -44,15 +44,15 @@ body {
   border-left: 280px solid transparent;
   border-right: 280px solid transparent;
   border-bottom: 82px solid transparent;
-  border-top: 192px solid #ff5757;
+  border-top: 192px solid #808080;
   transform-origin: top;
   pointer-events: none;
 }
 
 .pocket {
-  border-left: 280px solid #ff9999;
-  border-right: 280px solid #ff9999;
-  border-bottom: 180px solid #fd8787;
+  border-left: 280px solid #ffffff;
+  border-right: 280px solid #ffffff;
+  border-bottom: 180px solid #e7e7e7;
   border-top: 190px solid transparent;
   border-bottom-left-radius: 6px;
   border-bottom-right-radius: 6px;
@@ -60,7 +60,7 @@ body {
 
 .letter {
   position: relative;
-  background-color: #ffb4b8;
+  background-color: #ffffff;
   width: 95%;
   margin-left: auto;
   margin-right: auto;
@@ -85,7 +85,7 @@ body {
   left: 10%;
   width: 80%;
   height: 14%;
-  background-color: #fdb7ba;
+  background-color: #ffffff;
 }
 
 .words.line1 {
